# compiler

./: .gitignore  CMakeLists.txt  README.md  main.ly
include/: error_handler.h  lexer.h  token.h  tokenizer.h
src/: .lexical_analyzer.c.swp  .lync.c.swp  a.out  error_handler.c  lexer.c  lexical_analyzer.c  lync.c  token.c  tokenizer.c
